--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>elm_vue</title>
     <script src="./js/rem.js"></script>
+    <link rel="stylesheet" href="./font_899553_4obg6otv2n/iconfont.css">
   </head>
   <body>
     <noscript>
